# v4l2-capture-demo

./: .gitignore  CMakeLists.txt  README.md  encode.c  encode.h  main.c  v4l2.c  v4l2.h
